--- a/css/style.css
+++ b/css/style.css
@@ -2,36 +2,46 @@
 body, h1 {
   margin: 0;
   padding: 0;
-  color: #333;  
+  color: #333;
 }
 
 h1 {
   text-transform: uppercase;
 }
 
+section:focus {
+  outline: none;
+  outline-color: transparent;
+}
+
 /* Game view */
+.hide{
+  display: none;
+}
+
 .word-search-container {
-  width: 960px;
   margin: 0 auto;
   padding: 40px 0;
   text-align: center;
-  position: relative;
-  -moz-user-select: -moz-none;
-  -webkit-user-select: none;
-  -ms-user-select: none;
-  -moz-outline-style: none;
+  user-select: none;
 }
 
-.title, #gameArea {
+.title {
   margin-bottom: 40px;
 }
 
-.word-search, .hints {
+/* Wordsearch */
+.word-search {
   display: inline-block;
-  vertical-align: top;
+  background: #fafafa;
+  padding: 20px;
+  cursor: pointer;
+  line-height: 0;
 }
 
 .hints {
+  display: inline-block;
+  vertical-align: top;
   margin-left: 20px;
   text-align: left;
 }
@@ -44,52 +54,26 @@ h1 {
   text-transform: capitalize;
 }
 
-/* Wordsearch */
-.word-search {
-  background: #fafafa;
-  display: inline-block;
-  padding: 20px;
-  border-radius: 10px;
-}
-.letter{
-  vertical-align: middle;
-  font-size: 28px;
-  font-family: Calibri;
-  text-align: center;
-  color: #333;
-  font-weight: 400;
-}
-
-.ws-row {
-  line-height: 0;
-}
-
-.ws-col {
-  cursor: pointer;
-}
-
 .ws-col.ws-selected {
-  background: red;
+  background: #F00;
 }
 
 .ws-found {
-  background: yellow;
+  background: #FFFF00;
 }
 
 .ws-game-over-outer {
-  background: rgba(0, 0, 0, 0.85);
+  background-color: rgba(0, 0, 0, 0.85);
   height: 100%;
-  left: 0;
   position: absolute;
   top: 0;
   width: 100%;
+  text-align: center;
 }
 
 .ws-game-over-inner {
   width: 100%;
   height: 100%;
-  padding: 0;
-  margin: 0;
   display: table;
 }
 
@@ -99,15 +83,15 @@ h1 {
 }
 
 .ws-game-over h2 {
-  color: #FFFFFF;
+  color: #fff;
   font-size: 2em;
   text-transform: uppercase;
   padding: 0;
-  margin: 0 0 9px 0;
+  margin-right: 9px;
 }
 
 .ws-game-over p {
-  color: #FFFFFF;
+  color: #fff;
   font-size: 1em;
   padding: 0;
   margin: 0;
